[package]
name = "aces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.0"
crypto_box = "0.8.1"
bytes = "1.2.0"
chrono = "0.4"
